--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="social-links mt-3 text-center">
           <a href="https://twitter.com/Friiskyy_" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://www.twitch.tv/fri1skyy" class="twitch"><i class="bx bxl-twitch"></i></a>
-          <!-- <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a> -->
+          <a href="https://www.instagram.com/ifriiskyy/" class="instagram"><i class="bx bxl-instagram"></i></a> 
           <a href="https://discord.gg/sfdzQU9UyM" class="discord"><i class="bx bxl-discord"></i></a>
           <a href="https://www.tiktok.com/@ifriiskyy" class="tiktok"><i class="bx bxl-tiktok"></i></a>
         </div>
